--- a/src/partials/image-finder.html
+++ b/src/partials/image-finder.html
@@ -1,7 +1,20 @@
 <section class="image-finder">
-  <div class="container">
+  <div class="container-gallery">
     <h1 class="image-finder__title">goit-js-hw-13-image-finder</h1>
     <input type="text" class="image-finder__input" data-action="input" />
-    <ul class="image-finder-list list"></ul>
+    <ul class="image-finder-list js-gallery container list" id="my-element-selector"></ul>
+
+    <div class="button-box">
+      <button class="button-box__button is-hidden" data-action="load-more">Load more..</button>
+    </div>
   </div>
 </section>
+<div class="lightbox js-lightbox">
+  <div class="lightbox__overlay"></div>
+
+  <div class="lightbox__content">
+    <img class="lightbox__image" src="" alt="" />
+  </div>
+
+  <button type="button" class="lightbox__button" data-action="close-lightbox"></button>
+</div>
