--- a/src/sass/_image-finder.scss
+++ b/src/sass/_image-finder.scss
@@ -27,6 +27,8 @@ body {
   color: var(--main-colour);
   font-size: var(--primary-font-size);
   letter-spacing: 0.03em;
+  transition: background-color 8000ms;
+  // background-color: rgb(23, 29, 10) !important;
 }
 
 address {
@@ -36,6 +38,10 @@ address {
 
 .list {
   list-style: none;
+}
+
+.link {
+  text-decoration: none;
 }
 
 .body-style {
@@ -49,7 +55,7 @@ address {
   // font-size: xx-large;
 }
 
-.container {
+.container-gallery {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -71,7 +77,7 @@ address {
   background-color: rgb(19, 20, 22);
   box-shadow: 0 0 5px black;
   border-radius: 15px;
-  border: 1px solid rgb(60, 145, 74);
+  border: 1px solid rgb(133, 133, 133);
   color: rgb(194, 194, 194);
   transition: all 250ms;
   margin-bottom: 30px;
@@ -79,29 +85,35 @@ address {
   &:hover {
     outline: none;
     color: rgb(255, 255, 255);
-    box-shadow: 0 0 15px rgb(19, 136, 29);
-    border: 1px solid rgb(78, 185, 92);
+    box-shadow: 0 0 15px rgb(122, 122, 122);
+    border: 1px solid rgb(194, 194, 194);
   }
 }
 
 .image-finder-list {
   width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 15px;
+  grid-row-gap: 15px;
+  grid-auto-rows: minmax(100px, auto);
+  margin-bottom: 30px;
+  // grid-template-rows: repeat(auto-fill, 440px);
+  align-items: start;
+  @media screen and (max-width: 2600px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  @media screen and (max-width: 1600px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @media screen and (max-width: 1200px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 .image-finder-list__box {
   display: flex;
   // width: 100%;
-}
-
-.image-finder-list__first-box {
-  flex-grow: 1;
-  padding-top: 10px;
-  // background-color: rgb(40, 59, 59);
-}
-
-.image-finder-list__second-box {
-  // flex-grow: 1;
-  // background-color: rgb(39, 9, 9);
 }
 
 .image-finder-list__flag {
@@ -151,4 +163,93 @@ address {
     text-shadow: 0 0 3px white;
     background-color: rgb(34, 13, 29);
   }
+}
+
+.image-card__box {
+  height: min-content;
+}
+
+.image-card {
+  background-color: rgb(21, 22, 22);
+  // padding-bottom: 10px;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 0 15px rgb(0, 0, 0);
+  transition: all 250ms;
+  position: relative;
+  &:hover,
+  &:focus {
+    box-shadow: 0 0 12px rgb(156, 156, 156);
+    background-color: rgb(19, 19, 19);
+    // transform: scale(1.01);
+  }
+}
+
+.image-card__subtitle-list {
+  padding: 10px;
+  position: absolute;
+  // z-index: 3;
+  bottom: 15px;
+  left: 50%;
+  text-shadow: 0 0 10px black;
+  background-color: rgba(0, 0, 0, 0.192);
+  width: 300px;
+  height: 50px;
+  transform: translate(-50%, 0);
+  display: flex;
+  border-radius: 10px;
+}
+
+.image-card__subtitle-item {
+  display: flex;
+  // justify-content: space-between;
+  // flex-direction: column;
+  color: white;
+  font-size: 15px;
+  background-color: rgba(43, 26, 26, 0.281);
+  padding: 5px;
+  border-radius: 8px;
+  border: 1px solid rgba(255, 255, 255, 0.178);
+  &:not(:last-child) {
+    margin-right: auto;
+  }
+}
+
+.image-card__icon {
+  width: 30px;
+  height: 30px;
+  fill: white;
+  // box-shadow: 0 0 5 white;
+}
+
+.image-card__th {
+  font-weight: 700;
+  margin-right: 5px;
+}
+
+.button-box__button {
+  background-color: rgb(214, 214, 214);
+  border: none;
+  box-shadow: 0 0 15px rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
+  padding: 10px 30px;
+  border-radius: 10px;
+  transition: all 250ms;
+  font-size: 18px;
+  margin-bottom: 30px;
+  &:hover {
+    box-shadow: 0 0 6px rgb(255, 255, 255);
+    background-color: rgb(31, 28, 28);
+    cursor: pointer;
+    color: white;
+    text-shadow: 0 0 3px white;
+  }
+}
+
+.is-hidden {
+  display: none;
+}
+
+.inputError {
+  background-color: red;
 }
